exports[`Resolver tests resolve query one 1`] = `
Object {
  "createdAt": "2016-12-02T06:21:04.274Z",
  "firstActive": "2016-11-18T11:25:11.000Z",
  "id": 1,
  "isActive": false,
  "name": "na0.7634763846945991",
  "num": 15,
  "updatedAt": "2016-12-02T06:21:04.274Z",
}
`;

exports[`Resolver tests resolve query one with subscribe 1`] = `
Object {
  "createdAt": "2016-12-02T06:22:48.785Z",
  "firstActive": "2016-11-18T11:25:11.000Z",
  "id": 2,
  "isActive": false,
  "name": "na0.8272061912372501",
  "num": 15,
  "updatedAt": "2016-12-02T06:22:48.785Z",
}
`;

exports[`Resolver tests resolve query one with subscribe 2`] = `
Array [
  Array [
    "subscription-123",
    Object {
      "createdAt": "2016-12-02T06:22:48.785Z",
      "firstActive": "2016-11-18T11:25:11.000Z",
      "id": 2,
      "isActive": false,
      "name": "na0.8272061912372501",
      "num": 15,
      "title": "test",
      "updatedAt": "2016-12-02T06:22:48.794Z",
    },
  ],
]
`;
